Use Z Garbage Collector for reduced latency part 2
Need to apply them in the jpackage command in the native application
build scripts as well.